--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dbServer.js",
   "scripts": {
-    "build": "npm install",
-    "start": "node dbSerevr.js",
+    "start": "node dbServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
     "bcrypt": "^5.1.1",
